Fix z-Index

--- a/GreenwichUniversityMagazine/wwwroot/css/Student/Cardhome.css
+++ b/GreenwichUniversityMagazine/wwwroot/css/Student/Cardhome.css
@@ -6,7 +6,9 @@
 
 }
 
-
+.homepage {
+    z-index: 1;
+}
 
 .fixed-col-size {
     max-width: 150px; /* Định cỡ chiều rộng tuyệt đối */
